A few aesthetic improvements

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body style="background-color: #20232b;">
     <!-- Bootstrap navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #17274f;">
+        <a class="navbar-brand" href="#">Hello! I am Jorge</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
