--- a/index.html
+++ b/index.html
@@ -14,30 +14,47 @@
   <body style="background-color: #20232b;">
     <!-- Bootstrap navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #17274f;">
-        <a class="navbar-brand" href="#">Hello! I am Jorge</a>
+        <a class="navbar-brand">Hello! I am Jorge</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">About Jorge</a>
+              <a class="nav-link" href="#about">About Jorge</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Skills</a>
+              <a class="nav-link" href="#skill">Skills</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Publications</a>
+              <a class="nav-link" href="#publs">Publications</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Experience</a>
+              <a class="nav-link" href="#exps">Experience</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Trivia</a>
+              <a class="nav-link" href="#trivia">Trivia</a>
             </li>
           </ul>
         </div>
     </nav>
+
+    <!-- Bootstrap's grids -->
+    <div class="container">
+        <div class="row">
+            <div class="col" style="background-color: #343845" id="about">
+              <!-- About me -->
+              <img src="static/imgs/jorgeuliana.jpg" alt="Thats's me, Jorge" id="myphoto">
+            </div>
+            <div class="col">
+              2 of 3
+            </div>
+            <div class="col">
+              3 of 3
+            </div>
+        </div>
+    </div>
+
 
 	<script src="index.js"></script>
     
