Added some relevat links

--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
                     Hello, I am Jorge. I am currently an undergrad student in Computer Engineering.
                 </center>
               </p>
+              <p>
+                <center>
+                    <a href="https://github.com/jorgeuliana1">GitHub</a><br>
+                    <a href="https://www.linkedin.com/in/jorgeuliana/">LinkedIn</a>
+                </center>
+              </p>
             </div>
             <div class="col-lg-8 no-float">
               <h1>
